--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "localtunnel-server"]
 	path = localtunnel-server
 	url = git@github.com:klxu03/localtunnel-server.git
+[submodule "localtunnel-client"]
+	path = localtunnel-client
+	url = git@github.com:klxu03/localtunnel-client.git
