--- a/localtunnel-client/package.json
+++ b/localtunnel-client/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "localtunnel",
-  "description": "Expose localhost to the world",
-  "version": "2.0.2",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/localtunnel/localtunnel.git"
-  },
-  "author": "Roman Shtylman <shtylman@gmail.com>",
-  "contributors": [
-    "Roman Shtylman <shtylman@gmail.com>",
-    "Gert Hengeveld <gert@hichroma.com>",
-    "Tom Coleman <tom@hichroma.com>"
-  ],
-  "main": "./localtunnel.js",
-  "bin": {
-    "lt": "bin/lt.js"
-  },
-  "scripts": {
-    "test": "mocha --reporter list --timeout 60000 -- *.spec.js"
-  },
-  "dependencies": {
-    "axios": "0.21.4",
-    "debug": "4.3.2",
-    "openurl": "1.1.1",
-    "yargs": "17.1.1"
-  },
-  "devDependencies": {
-    "mocha": "~9.1.1"
-  },
-  "engines": {
-    "node": ">=8.3.0"
-  }
+	"name": "@kevthatdevs/localtunnel",
+	"type": "module",
+	"description": "Expose localhost to the world",
+	"version": "1.0.0",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/klxu03/tunnel-playing"
+	},
+	"author": "Kevin Xu <kevin@kevthatdevs.com>",
+	"contributors": [
+		"Leon Si <leon@leondreamed.com>",
+		"Roman Shtylman <shtylman@gmail.com>",
+		"Gert Hengeveld <gert@hichroma.com>",
+		"Tom Coleman <tom@hichroma.com>"
+	],
+	"main": "./localtunnel.js",
+	"bin": {
+		"dialect-tunnel": "bin/lt.js"
+	},
+	"scripts": {
+		"test": "mocha --reporter list --timeout 60000 -- *.spec.js"
+	},
+	"dependencies": {
+		"axios": "0.21.4",
+		"debug": "4.3.2",
+		"openurl": "1.1.1",
+		"yargs": "17.1.1"
+	},
+	"devDependencies": {
+		"mocha": "~9.1.1"
+	},
+	"engines": {
+		"node": ">=8.3.0"
+	}
 }
